--- a/visual/templates/base.html
+++ b/visual/templates/base.html
@@ -1,5 +1,4 @@
-Claro, aqui está o código HTML sem nenhuma referência ao Bootstrap: ```html {%
-load static %}
+{%load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
    
@@ -52,6 +51,7 @@ load static %}
               <button type="submit">            Search          </button>      
            
         </form>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
              
       </div>
          
